// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`InputLabel ENCOURA theme matches the snapshot 1`] = `
<div>
  <label
    class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-animated css-19cvex-MuiFormLabel-root-MuiInputLabel-root"
  >
    <div
      class="label-split"
    >
      <span
        class="label-help"
      >
        InputLabel
      </span>
      <span
        class="required"
      >
        *
      </span>
    </div>
  </label>
</div>
`;

exports[`InputLabel ENCOURA_CLASSIC theme matches the snapshot 1`] = `
<div>
  <label
    class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-animated css-sdb82k-MuiFormLabel-root-MuiInputLabel-root"
  >
    <div
      class="label-split"
    >
      <span
        class="label-help"
      >
        InputLabel
      </span>
      <span
        class="required"
      >
        *
      </span>
    </div>
  </label>
</div>
`;

exports[`InputLabel ENCOURAGE theme matches the snapshot 1`] = `
<div>
  <label
    class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-animated css-6i6fdu-MuiFormLabel-root-MuiInputLabel-root"
  >
    <div
      class="label-split"
    >
      <span
        class="label-help"
      >
        InputLabel
      </span>
      <span
        class="required"
      >
        *
      </span>
    </div>
  </label>
</div>
`;

exports[`InputLabel ENCOURAGE_E4E theme matches the snapshot 1`] = `
<div>
  <label
    class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-animated css-11i8ps4-MuiFormLabel-root-MuiInputLabel-root"
  >
    <div
      class="label-split"
    >
      <span
        class="label-help"
      >
        InputLabel
      </span>
      <span
        class="required"
      >
        *
      </span>
    </div>
  </label>
</div>
`;
